Bug 836927 - Make WMFByteStream bug compatible with WMF's IMFByteStream implementation. r=padenot